--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-linear-gradient')
     implementation project(':@react-native-community_async-storage')
     implementation "pl.droidsonroids.gif:android-gif-drawable:1.2.4"
     implementation project(':react-native-gesture-handler')
